# llm-26

./: .gitignore  README.md  index.md
.virtual_documents/lecture-06-gpts/: lecture-06-gpts.ipynb
assignments/assginment-02/: transformer.py
lecture-02-ngram-lm/: lecture-02-ngram-lms.ipynb
lecture-03-embeddings/: lecture-03-embeddings.ipynb
lecture-04-neural-lms/: lecture-04-neural-lms-YourStudentID-ChineseName.html  lecture-04-neural-lms-YourStudentID-ChineseName.ipynb  lecture-04-neural-lms-merged.ipynb  lecture-04-neural-lms.ipynb
lecture-05-transformers/: lecture-05-transformers--YourStudentID-ChineseName.ipynb  lecture-05-transformers-YourStudentID-ChineseName.ipynb  lecture-05-transformers-wmt.ipynb  lecture-05-transformers.html  lecture-05-transformers.ipynb
lecture-06-gpts/: fineweb-log.txt  fineweb.py  lecture-06-gpts-YourStudentID-ChineseName.ipynb  lecture-06-gpts.html  lecture-06-gpts.ipynb  main.py  pyproject.toml  train_gpt2.py  train_gpt2_v1.py  train_gpt2_v2.py  train_gpt2_v3.py  train_gpt2_v4.py  train_gpt2_v5_single_batch.py  train_gpt2_v6_multi_epoch.py  train_gpt2_v7_flash_attention.py  train_gpt2_v8_dynamic_learning_rate.py
lecture-06-gpts/gpt2_local/: config.json
slides/lecture-03-slides/: index.md
